[PAVAN]ADD: Reset Password Feature
